2022-09-05T16:08:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994687645
* notice: last 14d: unq all: 7 13
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 24 60
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 25 61
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-05]

2022-09-05T00:44:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990153247
* notice: last 14d: unq all: 6 12
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 23 57
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 24 60
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-04]

2022-09-01T16:08:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973196216
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 22 56
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 23 57
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-01]

2022-08-31T00:47:21Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960575011
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 21 54
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 22 56
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-30]

2022-08-30T16:08:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2957804138
* notice: last 14d: unq all: 3 6