@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-09-05T16:08:33Z",
+  "timestamp" : "2022-09-07T00:40:43Z",
   "count_outdated" : 48,
   "uniques_outdated" : 18,
-  "count" : 61,
+  "count" : 58,
   "uniques" : 25,
   "views" : [
     {
       "timestamp": "2022-08-24T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
