@@ -1,10 +1,10 @@
 {
-  "count": 13,
+  "count": 10,
   "uniques": 7,
   "views": [
     {
       "timestamp": "2022-08-24T00:00:00Z",
-      "count": 4,
+      "count": 1,
       "uniques": 1
     },
     {
