@@ -1,3 +1,11 @@
+2022-09-07T00:40:43Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3004308741
+* notice: last 14d: unq all: 7 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 25 61
+* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 25 58
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -3 / +1 +4 -0 -3 / 1 1
+* notice: removed / changed dates: [] / [2022-08-24]
+
 2022-09-05T16:08:33Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994687645
 * notice: last 14d: unq all: 7 13
